re PR middle-end/42739 (ICE with computed goto, destructors, and optimization)

2010-01-15  Richard Guenther  <rguenther@suse.de>

	PR middle-end/42739
	* tree-cfgcleanup.c (remove_forwarder_block): Move destination
	labels of computed or non-local gotos to the destination.
	* tree-cfg.c (gimple_verify_flow_info): Verify that a EH
	landing pad label is the first label.

	* g++.dg/torture/pr42739.C: New testcase.

From-SVN: r155937